--- a/test-output/index.html
+++ b/test-output/index.html
@@ -37,8 +37,8 @@
       <div class="suite">
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
-            <a href="#" panel-name="suite-NopCommerce" class="navigator-link">
-              <span class="suite-name border-passed">NopCommerce</span>
+            <a href="#" panel-name="suite-JQueryUpload" class="navigator-link">
+              <span class="suite-name border-passed">JQueryUpload</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -48,37 +48,37 @@
             <div class="suite-section-content">
               <ul>
                 <li>
-                  <a href="#" panel-name="test-xml-NopCommerce" class="navigator-link ">
+                  <a href="#" panel-name="test-xml-JQueryUpload" class="navigator-link ">
                     <span>D:\eclipse_Workspace\Framework\resources\runJqueryUpload.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="testlist-NopCommerce" class="navigator-link ">
+                  <a href="#" panel-name="testlist-JQueryUpload" class="navigator-link ">
                     <span class="test-stats">1 test</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="group-NopCommerce" class="navigator-link ">
+                  <a href="#" panel-name="group-JQueryUpload" class="navigator-link ">
                     <span>0 groups</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="times-NopCommerce" class="navigator-link ">
+                  <a href="#" panel-name="times-JQueryUpload" class="navigator-link ">
                     <span>Times</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="reporter-NopCommerce" class="navigator-link ">
+                  <a href="#" panel-name="reporter-JQueryUpload" class="navigator-link ">
                     <span>Reporter output</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="ignored-methods-NopCommerce" class="navigator-link ">
+                  <a href="#" panel-name="ignored-methods-JQueryUpload" class="navigator-link ">
                     <span>Ignored methods</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
-                  <a href="#" panel-name="chronological-NopCommerce" class="navigator-link ">
+                  <a href="#" panel-name="chronological-JQueryUpload" class="navigator-link ">
                     <span>Chronological view</span>
                   </a> <!-- navigator-link  -->
                 </li>
@@ -96,21 +96,21 @@
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
                     <span class="show-or-hide-methods passed">
-                      <a href="#" panel-name="suite-NopCommerce" class="hide-methods passed suite-NopCommerce"> (hide)</a> <!-- hide-methods passed suite-NopCommerce -->
-                      <a href="#" panel-name="suite-NopCommerce" class="show-methods passed suite-NopCommerce"> (show)</a> <!-- show-methods passed suite-NopCommerce -->
+                      <a href="#" panel-name="suite-JQueryUpload" class="hide-methods passed suite-JQueryUpload"> (hide)</a> <!-- hide-methods passed suite-JQueryUpload -->
+                      <a href="#" panel-name="suite-JQueryUpload" class="show-methods passed suite-JQueryUpload"> (show)</a> <!-- show-methods passed suite-JQueryUpload -->
                     </span>
-                    <div class="method-list-content passed suite-NopCommerce">
+                    <div class="method-list-content passed suite-JQueryUpload">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_01_One_File_Per_Time">Upload_01_One_File_Per_Time</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-JQueryUpload" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_01_One_File_Per_Time">Upload_01_One_File_Per_Time</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-NopCommerce" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_02_Multi_Files_Per_Time">Upload_02_Multi_Files_Per_Time</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-JQueryUpload" title="com.jquery.datatable.Level_11_Upload_Files" class="method navigator-link" hash-for-method="Upload_02_Multi_Files_Per_Time">Upload_02_Multi_Files_Per_Time</a> <!-- method navigator-link -->
                       </span>
                       <br/>
-                    </div> <!-- method-list-content passed suite-NopCommerce -->
+                    </div> <!-- method-list-content passed suite-JQueryUpload -->
                   </li>
                 </ul>
               </div> <!-- suite-section-content -->
@@ -121,8 +121,8 @@
     </div> <!-- navigator-root -->
     <div class="wrapper">
       <div class="main-panel-root">
-        <div panel-name="suite-NopCommerce" class="panel NopCommerce">
-          <div class="suite-NopCommerce-class-passed">
+        <div panel-name="suite-JQueryUpload" class="panel JQueryUpload">
+          <div class="suite-JQueryUpload-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
               <span class="class-name">com.jquery.datatable.Level_11_Upload_Files</span>
@@ -143,9 +143,9 @@
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
-          </div> <!-- suite-NopCommerce-class-passed -->
-        </div> <!-- panel NopCommerce -->
-        <div panel-name="test-xml-NopCommerce" class="panel">
+          </div> <!-- suite-JQueryUpload-class-passed -->
+        </div> <!-- panel JQueryUpload -->
+        <div panel-name="test-xml-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">D:\eclipse_Workspace\Framework\resources\runJqueryUpload.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -153,7 +153,7 @@
             <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
 &lt;!DOCTYPE suite SYSTEM &quot;http://testng.org/testng-1.0.dtd&quot;&gt;
-&lt;suite name=&quot;NopCommerce&quot;&gt;
+&lt;suite name=&quot;JQueryUpload&quot;&gt;
   &lt;parameter name=&quot;url&quot; value=&quot;https://blueimp.github.io/jQuery-File-Upload/&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
     &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
@@ -161,13 +161,13 @@
       &lt;class name=&quot;com.jquery.datatable.Level_11_Upload_Files&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Run on Firefox --&gt;
-&lt;/suite&gt; &lt;!-- NopCommerce --&gt;
+&lt;/suite&gt; &lt;!-- JQueryUpload --&gt;
             </pre>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="testlist-NopCommerce" class="panel">
+        <div panel-name="testlist-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Tests for NopCommerce</span>
+            <span class="header-content">Tests for JQueryUpload</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <ul>
@@ -177,22 +177,22 @@
             </ul>
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="group-NopCommerce" class="panel">
+        <div panel-name="group-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Groups for NopCommerce</span>
+            <span class="header-content">Groups for JQueryUpload</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="times-NopCommerce" class="panel">
+        <div panel-name="times-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Times for NopCommerce</span>
+            <span class="header-content">Times for JQueryUpload</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="times-div">
               <script type="text/javascript">
-suiteTableInitFunctions.push('tableData_NopCommerce');
-function tableData_NopCommerce() {
+suiteTableInitFunctions.push('tableData_JQueryUpload');
+function tableData_JQueryUpload() {
 var data = new google.visualization.DataTable();
 data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
@@ -202,36 +202,36 @@ data.addRows(2);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'Upload_01_One_File_Per_Time')
 data.setCell(0, 2, 'com.jquery.datatable.Level_11_Upload_Files')
-data.setCell(0, 3, 4);
+data.setCell(0, 3, 6);
 data.setCell(1, 0, 1)
 data.setCell(1, 1, 'Upload_02_Multi_Files_Per_Time')
 data.setCell(1, 2, 'com.jquery.datatable.Level_11_Upload_Files')
 data.setCell(1, 3, 1);
-window.suiteTableData['NopCommerce']= { tableData: data, tableDiv: 'times-div-NopCommerce'}
+window.suiteTableData['JQueryUpload']= { tableData: data, tableDiv: 'times-div-JQueryUpload'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 5 ms</span>
-              <div id="times-div-NopCommerce">
-              </div> <!-- times-div-NopCommerce -->
+              <span class="suite-total-time">Total running time: 7 ms</span>
+              <div id="times-div-JQueryUpload">
+              </div> <!-- times-div-JQueryUpload -->
             </div> <!-- times-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="reporter-NopCommerce" class="panel">
+        <div panel-name="reporter-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">Reporter output for NopCommerce</span>
+            <span class="header-content">Reporter output for JQueryUpload</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="ignored-methods-NopCommerce" class="panel">
+        <div panel-name="ignored-methods-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
-        <div panel-name="chronological-NopCommerce" class="panel">
+        <div panel-name="chronological-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
             <span class="header-content">Methods in chronological order</span>
           </div> <!-- main-panel-header rounded-window-top -->
@@ -244,15 +244,15 @@ return data;
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Upload_01_One_File_Per_Time</span>
-                <span class="method-start">5908 ms</span>
+                <span class="method-start">6561 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Upload_02_Multi_Files_Per_Time</span>
-                <span class="method-start">5914 ms</span>
+                <span class="method-start">6569 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">5916 ms</span>
+                <span class="method-start">6571 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
