--- a/test-output/index.html
+++ b/test-output/index.html
@@ -49,7 +49,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-JQueryUpload" class="navigator-link ">
-                    <span>D:\eclipse_Workspace\Framework\resources\runJqueryUpload.xml</span>
+                    <span>E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryUpload.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -147,7 +147,7 @@
         </div> <!-- panel JQueryUpload -->
         <div panel-name="test-xml-JQueryUpload" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">D:\eclipse_Workspace\Framework\resources\runJqueryUpload.xml</span>
+            <span class="header-content">E:\Selenium\03 - Hybrid Framework\hybrid-framework-nopcommerce\resources\runJqueryUpload.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -156,7 +156,7 @@
 &lt;suite name=&quot;JQueryUpload&quot;&gt;
   &lt;parameter name=&quot;url&quot; value=&quot;https://blueimp.github.io/jQuery-File-Upload/&quot;/&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Run on Firefox&quot;&gt;
-    &lt;parameter name=&quot;browser&quot; value=&quot;firefox&quot;/&gt;
+    &lt;parameter name=&quot;browser&quot; value=&quot;chrome&quot;/&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.jquery.datatable.Level_11_Upload_Files&quot;/&gt;
     &lt;/classes&gt;
@@ -200,18 +200,18 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(2);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'Upload_01_One_File_Per_Time')
+data.setCell(0, 1, 'Upload_02_Multi_Files_Per_Time')
 data.setCell(0, 2, 'com.jquery.datatable.Level_11_Upload_Files')
-data.setCell(0, 3, 6);
+data.setCell(0, 3, 21993);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'Upload_02_Multi_Files_Per_Time')
+data.setCell(1, 1, 'Upload_01_One_File_Per_Time')
 data.setCell(1, 2, 'com.jquery.datatable.Level_11_Upload_Files')
-data.setCell(1, 3, 1);
+data.setCell(1, 3, 5370);
 window.suiteTableData['JQueryUpload']= { tableData: data, tableDiv: 'times-div-JQueryUpload'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 ms</span>
+              <span class="suite-total-time">Total running time: 27 seconds</span>
               <div id="times-div-JQueryUpload">
               </div> <!-- times-div-JQueryUpload -->
             </div> <!-- times-div -->
@@ -239,20 +239,20 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">com.jquery.datatable.Level_11_Upload_Files</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">beforeClass(firefox, https://blueimp.github.io/jQuery-File-Upload/)</span>
+                <span class="method-name">beforeClass(chrome, https://blueimp.github.io/jQuery-File-Upload/)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">Upload_01_One_File_Per_Time</span>
-                <span class="method-start">6561 ms</span>
+                <span class="method-start">7368 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">Upload_02_Multi_Files_Per_Time</span>
-                <span class="method-start">6569 ms</span>
+                <span class="method-start">12739 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">afterClass</span>
-                <span class="method-start">6571 ms</span>
+                <span class="method-start">34733 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
