--- a/test-output/old/JQueryUpload/methods-alphabetical.html
+++ b/test-output/old/JQueryUpload/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>JQueryUpload</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="7888a2">  <td>22/11/04 15:06:19</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_01_One_File_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">Upload_01_One_File_Per_Time</td> 
-  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/04 15:06:19</td>   <td>8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_02_Multi_Files_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">Upload_02_Multi_Files_Per_Time</td> 
-  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/04 15:06:19</td>   <td>10</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_11_Upload_Files.afterClass()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">&lt;&lt;afterClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
-<tr bgcolor="7888a2">  <td>22/11/04 15:06:13</td>   <td>-6554</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_11_Upload_Files.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@bccb269]">&gt;&gt;beforeClass</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@681008168</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/07 23:25:07</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_01_One_File_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@131ef10]">Upload_01_One_File_Per_Time</td> 
+  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/07 23:25:12</td>   <td>5371</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Level_11_Upload_Files.Upload_02_Multi_Files_Per_Time()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@131ef10]">Upload_02_Multi_Files_Per_Time</td> 
+  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/07 23:25:34</td>   <td>27365</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Level_11_Upload_Files.afterClass()[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@131ef10]">&lt;&lt;afterClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
+<tr bgcolor="977370">  <td>22/11/07 23:25:00</td>   <td>-7362</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Level_11_Upload_Files.beforeClass(java.lang.String, java.lang.String)[pri:0, instance:com.jquery.datatable.Level_11_Upload_Files@131ef10]">&gt;&gt;beforeClass</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@726379593</td>   <td></td> </tr>
 </table>
